Frontend: fixed layout bugs. - Some album covers were smaller than others. - The track titles were cropped.

--- a/frontend/src/components/TrackTile.css
+++ b/frontend/src/components/TrackTile.css
@@ -21,7 +21,7 @@ p {
     display: flex;
     flex-direction: column;
     position: relative;
-    top: -1px;
+    top: -2px;
     max-width: 100%;
 }
 
@@ -32,10 +32,10 @@ p {
 }
 
 .track_title {
-    font-size: 1.45em;
+    font-size: 1.4em;
     padding: 0;
     margin: 0px 0;
-    line-height: 100%;
+    line-height: 120%;
 }
 
 .track_title_version {
@@ -43,8 +43,10 @@ p {
 }
 
 .track_metadata .artist_name {
-    font-size: 1em;
+    font-size: 0.9em;
     line-height: 100%;
+    position: relative;
+    top: -2px;
 }
 
 .artist_name_role_feat {
@@ -54,7 +56,7 @@ p {
 .album_name {
     font-size: 0.8em;
     position: relative;
-    top: -2px;
+    top: -4px;
 }
 
 .album_name .album_hard_text {
@@ -67,7 +69,7 @@ p {
     font-size: 0.8em;
     color: #777;
     position: relative;
-    top: -4px;
+    top: -6px;
 }
 
 .additional_info ion-icon {
